Changing all the placeholder texts

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <h1>Hello</h1>
                 <h3>A Bit About Me:</h3>
                 <p>
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.
+                    I am Brandon Quon and I am currently a second year computer science student at SFU. I made this to learn frontend development and to express my interest in it (alongside backend). More improvements and projects to come!
                 </p>
             </div>
         </div>
@@ -52,7 +52,9 @@
                     </a>
                 </div>
                 <div class="word-info">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    <p>
+                        Word Wizardy, a typing test using <b>Python Tkinter</b> where you can test your WPM in two different game modes! Top 5 scores are kept for each mode as well! 
+                    </p>
                 </div>
             </div>
 
@@ -63,7 +65,7 @@
                     </a>
                 </div>
                 <div class="casino-info">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    <p>Carefree gambling can be achieved by being filthy rich or by playing my <b>C++</b> Casino Simulator! Games included are blackjack, roulette, and slots with room for future expansion.</p>
                 </div>
             </div>
 
@@ -74,7 +76,7 @@
                     </a>
                 </div>
                 <div class="hackathon-info">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    <p>A game created during a hackathon where you have to decrypt incoming messages to save the world!</p>
                 </div>
             </div>  
 
@@ -85,7 +87,7 @@
                     </a>
                 </div>
                 <div class="hangman-info">
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    <p>A classic Hangman game created with <b>Python Turtle</b>.</p>
                 </div>
             </div>
             
@@ -122,7 +124,10 @@
                     <h3>Journaling App/Site</h3>
                 </div>
                 <div class="content" hidden>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    <p>
+                        A (hopeful) full stack project that will act as a journal for users to write anything.
+                        <br><br> This will help me learn SQL as well as even further develop my frontend skills
+                    </p>
                 </div>
             </div>
             <div class="card">
@@ -130,7 +135,10 @@
                     <h3>Java Game</h3>
                 </div>
                 <div class="content" hidden>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    <p>
+                        A group project for my class that will be completed by the end of the semester using Java only.
+                        <br><br> Estimated completion: April 2024.
+                    </p>
                 </div>
             </div>
             <div class="card">
@@ -138,7 +146,10 @@
                     <h3>Mountain Madness</h3>
                 </div>
                 <div class="content" hidden>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    <p>
+                        An annual hackathon that I will take part in to create a totally awesome project.
+                        <br><br> Estimated completion: Mid February 2024.
+                    </p>
                 </div>
             </div>
             <div class="card">
@@ -146,7 +157,9 @@
                     <h3>This Website</h3>
                 </div>
                 <div class="content" hidden>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                    <p>
+                        I will be keeping this website updated and implement improvements as time goes on. Thanks for viewing it!
+                    </p>
                 </div>
             </div>
         </div>
