Added a hover tooltip for the upcoming projects

--- a/index.html
+++ b/index.html
@@ -118,6 +118,9 @@
         <div class="wip">
             <h1>Upcoming Projects</h1>
         </div>
+        <div class="tooltip">
+            <h5>Hover a card for more info</h5>
+        </div>
         <div class="card-container">
             <div class="card">
                 <div class="face">
