Added speech bubble pic in files for gengar and added tooltip for project section

--- a/index.html
+++ b/index.html
@@ -44,6 +44,9 @@
         <div class="project-header">
             <h1>Projects</h1>
         </div>
+        <div class="tooltip">
+            <h5>Hover and click picture for Github Repo</h5>
+        </div>
         <div class="example-container">
             <div class="word-game">
                 <div class="word-picture">
