Implemented gengar hover speech bubble, maybe change hover element

--- a/index.html
+++ b/index.html
@@ -172,7 +172,11 @@
     </div>
     
     <div class="gif">
-        <img src="images/gengar.gif" height="100" width="100">
+        <div class="speech">
+            <h5>Gengar</h5>
+            <img src="images/speechbub.png" height="60" width="75">
+        </div>
+        <img src="images/gengar.gif" height="100" width="100" id="gengar-gif">
     </div>
 
     <footer>
