Changed upcoming project header

--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 
     <div class="container">
         <div class="wip">
-            <h1>Upcoming Projects</h1>
+            <h1>Upcoming Projects/WIPS</h1>
         </div>
         <div class="tooltip">
             <h5>Hover a card for more info</h5>
