Updated todo list

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 <h1>Hello</h1>
                 <h3>A Bit About Me:</h3>
                 <p>
-                    I am Brandon Quon and I am currently a second year computer science student at SFU. I made this to learn frontend development and to express my interest in it (alongside backend). More improvements and projects to come!
+                    My name is Brandon Quon and I am currently a second year computer science student at SFU. I made this site to learn frontend development and to express my interest in it (alongside backend). More improvements and projects to come!
                 </p>
             </div>
         </div>
