kind of accomplished text sliding down from upcoming project header

--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
                 <div class="face">
                     <h3>Journaling App/Site</h3>
                 </div>
-                <div class="content" hidden>
+                <div class="content">
                     <p>
                         A (hopeful) full stack project that will act as a journal for users to write anything.
                         <br><br> This will help me learn SQL as well as even further develop my frontend skills
@@ -140,7 +140,7 @@
                 <div class="face">
                     <h3>Java Game</h3>
                 </div>
-                <div class="content" hidden>
+                <div class="content">
                     <p>
                         A group project for my class that will be completed by the end of the semester using Java only.
                         <br><br> Estimated completion: April 2024.
@@ -151,7 +151,7 @@
                 <div class="face">
                     <h3>Mountain Madness</h3>
                 </div>
-                <div class="content" hidden>
+                <div class="content">
                     <p>
                         An annual hackathon that I will take part in to create a totally awesome project.
                         <br><br> Estimated completion: Mid February 2024.
@@ -162,7 +162,7 @@
                 <div class="face">
                     <h3>This Website</h3>
                 </div>
-                <div class="content" hidden>
+                <div class="content">
                     <p>
                         I will be keeping this website updated and implement improvements as time goes on. Thanks for viewing it!
                     </p>
