Adjusted bio message

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
     
     <ul class="taskbar">
         <div class="links">
-            <li><a href="#">Resume |</a></li>
-            <li><a href="#project-section">Projects  |</a></li>
+            <li><a href="#top">Home |</a></li>
+            <li><a href="#project-section">Projects |</a></li>
             <li><a href="#contacts">Contact</a></li>
         </div>
         <div class="name">
@@ -34,7 +34,7 @@
                 <h1>Hello</h1>
                 <h3>A Bit About Me:</h3>
                 <p>
-                    My name is Brandon Quon and I am currently a second year computer science student at SFU. I made this site to learn frontend development and to express my interest in it (alongside backend). More improvements and projects to come!
+                    My name is Brandon Quon and I am currently a second year computer science student at SFU. I made this site to learn frontend development and to express my interest in all fields of computer science. More improvements and projects to come!
                 </p>
             </div>
         </div>
