--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="style.css">
 
     <title>Brandon Quon</title>
+    <script src="script.js"></script>
 </head>
 <body>
     
