Changed upcoming project content

--- a/index.html
+++ b/index.html
@@ -161,11 +161,11 @@
             </div>
             <div class="card">
                 <div class="face">
-                    <h3>This Website</h3>
+                    <h3>A New Website</h3>
                 </div>
                 <div class="content">
                     <p>
-                        I will be keeping this website updated and implement improvements as time goes on. Thanks for viewing it!
+                        I am currently working on a new website with a new style, this acted as a refresher for HTML & CSS, the next one will include JS as I learn it
                     </p>
                 </div>
             </div>
