Added intersectionobserver for header

--- a/index.html
+++ b/index.html
@@ -42,11 +42,13 @@
     </div>
     
     <div class="project-container" id="project-section">
-        <div class="project-header">
-            <h1>Projects</h1>
-        </div>
-        <div class="tooltip">
-            <h5>Hover and click picture for Github Repo</h5>
+        <div class="a">
+            <div class="project-header">
+                <h1>Projects</h1>
+            </div>
+            <div class="tooltip">
+                <h5>Hover and click picture for Github Repo</h5>
+            </div>
         </div>
         <div class="example-container">
             <div class="word-game">
@@ -206,6 +208,8 @@
             </div>
         </div>
     </footer>
+
+    <script src="script.js" defer></script>
 
 </body>
 </html>
