Did intersection observer for Project title but only standstill?, will just update this site

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link rel="stylesheet" href="style.css">
 
     <title>Brandon Quon</title>
-    <script src="script.js"></script>
+
 </head>
 <body>
     
@@ -42,7 +42,7 @@
     </div>
     
     <div class="project-container" id="project-section">
-        <div class="a">
+        <div class="project-title">
             <div class="project-header">
                 <h1>Projects</h1>
             </div>
@@ -209,7 +209,7 @@
         </div>
     </footer>
 
-    <script src="script.js" defer></script>
+    <script src="script.js"></script>
 
 </body>
 </html>
