--- a/index.html
+++ b/index.html
@@ -163,11 +163,11 @@
             </div>
             <div class="card">
                 <div class="face">
-                    <h3>A New Website</h3>
+                    <h3>This Website</h3>
                 </div>
                 <div class="content">
                     <p>
-                        I am currently working on a new website with a new style, this acted as a refresher for HTML & CSS, the next one will include JS as I learn it
+                        I am currently working on this site and implementing JS as I learn it 
                     </p>
                 </div>
             </div>
