Added a card forr the upcoming project

--- a/index.html
+++ b/index.html
@@ -120,13 +120,7 @@
         </div>
     </div> -->
 
-    <div class="container">
-        <div class="wip">
-            <h1>Upcoming Projects/WIPS</h1>
-        </div>
-        <div class="tooltip">
-            <h5>Hover a card for more info</h5>
-        </div>
+    <div class="container page3">
         <div class="card-container">
             <div class="card">
                 <div class="face">
@@ -135,11 +129,11 @@
                 <div class="content">
                     <p>
                         A (hopeful) full stack project that will act as a journal for users to write anything.
-                        <br><br> This will help me learn SQL as well as even further develop my frontend skills
+                        This will help me learn SQL as well as even further develop my frontend skills
                     </p>
                 </div>
             </div>
-            <div class="card">
+            <!-- <div class="card">
                 <div class="face">
                     <h3>Java Game</h3>
                 </div>
@@ -170,7 +164,7 @@
                         I am currently working on this site and implementing JS as I learn it 
                     </p>
                 </div>
-            </div>
+            </div> -->
         </div>
     </div>
     
