--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                     </p>
                 </div>
             </div>
-            <!-- <div class="card">
+            <div class="card">
                 <div class="face">
                     <h3>Java Game</h3>
                 </div>
@@ -164,7 +164,7 @@
                         I am currently working on this site and implementing JS as I learn it 
                     </p>
                 </div>
-            </div> -->
+            </div>
         </div>
     </div>
     
