Added individual card flipping

--- a/index.html
+++ b/index.html
@@ -122,49 +122,62 @@
 
     <div class="container page3">
         <div class="card-container">
-            <div class="card">
-                <div class="face">
-                    <h3>Journaling App/Site</h3>
-                </div>
-                <div class="content">
-                    <p>
-                        A (hopeful) full stack project that will act as a journal for users to write anything.
-                        This will help me learn SQL as well as even further develop my frontend skills
-                    </p>
-                </div>
-            </div>
-            <div class="card">
-                <div class="face">
-                    <h3>Java Game</h3>
-                </div>
-                <div class="content">
-                    <p>
-                        A group project for my class that will be completed by the end of the semester using Java only.
-                        <br><br> Estimated completion: April 2024.
-                    </p>
+
+            <div id="card1">
+                <div class="card">
+                    <div class="face">
+                        <h3>Journaling App/Site</h3>
+                    </div>
+                    <div class="content">
+                        <p>
+                            A (hopeful) full stack project that will act as a journal for users to write anything.
+                            This will help me learn SQL as well as even further develop my frontend skills
+                        </p>
+                    </div>
                 </div>
             </div>
-            <div class="card">
-                <div class="face">
-                    <h3>Mountain Madness</h3>
-                </div>
-                <div class="content">
-                    <p>
-                        An annual hackathon that I will take part in to create a totally awesome project.
-                        <br><br> Estimated completion: Mid February 2024.
-                    </p>
-                </div>
-            </div>
-            <div class="card">
-                <div class="face">
-                    <h3>This Website</h3>
-                </div>
-                <div class="content">
-                    <p>
-                        I am currently working on this site and implementing JS as I learn it 
-                    </p>
+
+            <div id="card2">
+                <div class="card">
+                    <div class="face">
+                        <h3>Java Game</h3>
+                    </div>
+                    <div class="content">
+                        <p>
+                            A group project for my class that will be completed by the end of the semester using Java only.
+                            <br><br> Estimated completion: April 2024.
+                        </p>
+                    </div>
                 </div>
             </div>
+
+            <div id="card3">
+                <div class="card">
+                    <div class="face">
+                        <h3>Mountain Madness</h3>
+                    </div>
+                    <div class="content">
+                        <p>
+                            An annual hackathon that I will take part in to create a totally awesome project.
+                            <br><br> Estimated completion: Mid February 2024.
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+            <div id="card4">
+                <div class="card">
+                    <div class="face">
+                        <h3>This Website</h3>
+                    </div>
+                    <div class="content">
+                        <p>
+                            I am currently working on this site and implementing JS as I learn it 
+                        </p>
+                    </div>
+                </div>
+            </div>
+            
         </div>
     </div>
     
