--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
     </div>
     
     <div class="project-container" id="project-section">
-        <div class="project-title">
+        <div class="section-title">
             <div class="project-header">
                 <h1>Projects</h1>
             </div>
