Fixed layout of the upcoming project header

--- a/index.html
+++ b/index.html
@@ -100,27 +100,10 @@
         </div>
     </div>
 
-    <!-- <div class="big-container">
-        <div class="wip">
-            <h1>Upcoming Projects</h1>
-        </div>
-        <div class="circle-container">
-            <div class="circle">
-                <p><br><br><br><br><br>hello</p>
-            </div>
-            <div class="circle">
-                <p><br><br><br><br><br>hello</p>
-            </div>
-            <div class="circle">
-                <p><br><br><br><br><br>hello</p>
-            </div>
-            <div class="circle">
-                <p><br><br><br><br><br>hello</p>
-            </div>
-        </div>
-    </div> -->
-
     <div class="container page3">
+        <div class="section-title">
+            <h1>Upcoming Projects/WIPS</h1>
+        </div>
         <div class="card-container">
 
             <div id="card1">
