Made all pages sticky to have the page come up rather than scroll down

--- a/index.html
+++ b/index.html
@@ -25,18 +25,19 @@
             <li><a href="#top">Brandon Quon</a></li>
         </div>
     </ul>
-
-    <div class="intro-container">
-        <div class="picture">
-            <img src="images/icon.jpg">
-        </div>
-        <div class="bio-container">
-            <div class="bio">
-                <h1>Hello</h1>
-                <h3>A Bit About Me:</h3>
-                <p>
-                    My name is Brandon Quon and I am currently a second year computer science student at SFU. I made this site to learn frontend development and to express my interest in all fields of computer science. More improvements and projects to come!
-                </p>
+    <div class="page1">
+        <div class="intro-container">
+            <div class="picture">
+                <img src="images/icon.jpg">
+            </div>
+            <div class="bio-container">
+                <div class="bio">
+                    <h1>Hello</h1>
+                    <h3>A Bit About Me:</h3>
+                    <p>
+                        My name is Brandon Quon and I am currently a second year computer science student at SFU. I made this site to learn frontend development and to express my interest in all fields of computer science. More improvements and projects to come!
+                    </p>
+                </div>
             </div>
         </div>
     </div>
