Added taskbar element but it doesnt work properly because of stacking elements

--- a/index.html
+++ b/index.html
@@ -19,7 +19,9 @@
         <div class="links">
             <li><a href="#top">Home |</a></li>
             <li><a href="#project-section">Projects |</a></li>
+            <li><a href="#upcoming-section">Upcoming |</a></li>
             <li><a href="#contacts">Contact</a></li>
+
         </div>
         <div class="name">
             <li><a href="#top">Brandon Quon</a></li>
@@ -101,7 +103,7 @@
         </div>
     </div>
 
-    <div class="container page3">
+    <div class="container page3" id="upcoming-section">
         <div class="section-title">
             <h1>Upcoming Projects/WIPS</h1>
         </div>
@@ -110,12 +112,11 @@
             <div id="card1">
                 <div class="card">
                     <div class="face">
-                        <h3>Journaling App/Site</h3>
+                        <h3>Some Type of Full-stack Project</h3>
                     </div>
                     <div class="content">
                         <p>
-                            A (hopeful) full stack project that will act as a journal for users to write anything.
-                            This will help me learn SQL as well as even further develop my frontend skills
+                            Some type of full-stack project, possibly a workout tracker or a more simple journaling project.
                         </p>
                     </div>
                 </div>
@@ -124,11 +125,11 @@
             <div id="card2">
                 <div class="card">
                     <div class="face">
-                        <h3>Java Game</h3>
+                        <h3>A Java Game</h3>
                     </div>
                     <div class="content">
                         <p>
-                            A group project for my class that will be completed by the end of the semester using Java only.
+                            A group project for my class that will be using Java only.
                             <br><br> Estimated completion: April 2024.
                         </p>
                     </div>
@@ -142,7 +143,7 @@
                     </div>
                     <div class="content">
                         <p>
-                            An annual hackathon that I will take part in to create a totally awesome project.
+                            A hackathon that I will take part in to create a totally awesome project.
                             <br><br> Estimated completion: Mid February 2024.
                         </p>
                     </div>
@@ -156,7 +157,7 @@
                     </div>
                     <div class="content">
                         <p>
-                            I am currently working on this site and implementing JS as I learn it 
+                            As I think of new ideas and learn JavaScript, I will continue to improve this website and add features (just like these cards).
                         </p>
                     </div>
                 </div>
