--- a/index.html
+++ b/index.html
@@ -106,6 +106,7 @@
     <div class="container page3" id="upcoming-section">
         <div class="section-title">
             <h1>Upcoming Projects/WIPS</h1>
+            <br><p>Click a Card!</p>
         </div>
         <div class="card-container">
 
