--- a/index.html
+++ b/index.html
@@ -18,8 +18,6 @@
     <ul class="taskbar">
         <div class="links">
             <li><a href="#top">Home |</a></li>
-            <li><a href="#project-section">Projects |</a></li>
-            <li><a href="#upcoming-section">Upcoming |</a></li>
             <li><a href="#contacts">Contact</a></li>
 
         </div>
@@ -44,7 +42,7 @@
         </div>
     </div>
     
-    <div class="project-container" id="project-section">
+    <div class="project-container">
         <div class="section-title">
             <h1>Projects</h1>
             <p>Hover and click picture for Github Repo</p>
@@ -99,7 +97,7 @@
         </div>
     </div>
 
-    <div class="container page3" id="upcoming-section">
+    <div class="container page3">
         <div class="section-title">
             <h1>Upcoming Projects/WIPS</h1>
             <br><p>Click a Card!</p>
