--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 </head>
 <body>
     
+    <div class="scroll-bar"></div>
+
     <ul class="taskbar">
         <div class="links">
             <li><a href="#top">Home |</a></li>
