--- a/index.html
+++ b/index.html
@@ -164,6 +164,9 @@
     </div>
     
     <div class="page4" id="contacts">
+        <div class="section-title">
+            <h1>Contact Me</h1>
+        </div>
         <div class="contact-container">
             <div class="contact-title">
                 <h2>Get in Touch</h2>
@@ -178,6 +181,25 @@
                 <textarea name="message" id="message" placeholder="Your Message" cols="30" rows="10" required></textarea>
                 <button type="submit" class="button">Submit</button>
             </form>
+        </div>
+
+        <div class="extra-container">
+            <div class="link-container">
+                <div class="link-title">
+                    <h3>More Links</h3>
+                </div>
+                <div class="image-container">
+                    <a href="https://github.com/bnquon" target="_blank" rel="noopener noreferrer"><img src="images/github.png"></a>
+                    <a href="#" target="_blank" rel="noopener noreferrer"><img src="images/linkedin-logo.png"></a>
+                </div>
+            </div>
+        </div>
+
+        <div class="ending-text">
+            <h1>Thanks for Visiting</h1>
+        </div>
+        <div class="copyright">
+            <h3>&copy; Brandon Quon</h3>
         </div>
 
     </div>
