Added meme picture

--- a/index.html
+++ b/index.html
@@ -183,6 +183,10 @@
             </form>
         </div>
 
+        <div class="funny-picture">
+            <img src="images/Coding Meme.jpg" alt="" srcset="">
+        </div>
+
         <div class="extra-container">
             <div class="link-container">
                 <div class="link-title">
