--- a/index.html
+++ b/index.html
@@ -183,20 +183,10 @@
             </form>
         </div>
 
-        <div class="funny-picture">
-            <img src="images/Coding Meme.jpg" alt="" srcset="">
-        </div>
-
-        <div class="extra-container">
-            <div class="link-container">
-                <div class="link-title">
-                    <h3>More Links</h3>
-                </div>
-                <div class="image-container">
-                    <a href="https://github.com/bnquon" target="_blank" rel="noopener noreferrer"><img src="images/github.png"></a>
-                    <a href="#" target="_blank" rel="noopener noreferrer"><img src="images/linkedin-logo.png"></a>
-                </div>
-            </div>
+        <div class="link-container">
+            <h3>More Links</h3>
+            <a href="https://github.com/bnquon" target="_blank" rel="noopener noreferrer"><img src="images/github.png" width="60"></a>
+            <a href="#" target="_blank" rel="noopener noreferrer"><img src="images/linkedin-logo.png" width="60"></a>
         </div>
 
         <div class="ending-text">
