--- a/index.html
+++ b/index.html
@@ -172,7 +172,8 @@
                 <h2>Get in Touch</h2>
                 <hr>
             </div>
-            <form action="" class="contact-form">
+            <form action="https://api.web3forms.com/submit" method="POST" class="contact-form">
+                <input type="hidden" name="access_key" value="3ccb779a-1b40-496b-aecb-0cd51f1e98d5">
                 <label for="name">Full Name</label>
                 <input type="text" id="name" name="name" placeholder="Brandon Quon" required>
                 <label for="email">Email Address</label>
