--- a/index.html
+++ b/index.html
@@ -185,9 +185,14 @@
         </div>
 
         <div class="link-container">
-            <h3>More Links</h3>
-            <a href="https://github.com/bnquon" target="_blank" rel="noopener noreferrer"><img src="images/github.png" width="60"></a>
-            <a href="#" target="_blank" rel="noopener noreferrer"><img src="images/linkedin-logo.png" width="60"></a>
+            <div class="meme">
+                <img src="images/Coding meme.png">
+            </div>
+            <div class="links">
+                <h3>More Links</h3>
+                <a href="https://github.com/bnquon" target="_blank" rel="noopener noreferrer"><img src="images/github.png" width="60"></a>
+                <a href="#" target="_blank" rel="noopener noreferrer"><img src="images/linkedin-logo.png" width="60"></a>
+            </div>
         </div>
 
         <div class="ending-text">
