--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                 <label for="email">Email Address</label>
                 <input type="email" name="email" id="email" placeholder="someone@example.com" required>
                 <label for="message">Send Your Message</label>
-                <textarea name="message" id="message" placeholder="Your Message" cols="30" rows="10" required></textarea>
+                <textarea name="message" id="message" placeholder="Your Message" rows="7" required></textarea>
                 <button type="submit" class="button">Submit</button>
             </form>
         </div>
