Added link to github upcoming project

--- a/index.html
+++ b/index.html
@@ -113,7 +113,7 @@
                     </div>
                     <div class="content">
                         <p>
-                            Some type of full-stack project, possibly a workout tracker or a more simple journaling project.
+                            Some type of full-stack project, possibly a workout tracker or a more simple journaling project. <br> <a href="https://github.com/bnquon/FitFolio" target="_blank" rel="noopener noreferrer">See more</a>
                         </p>
                     </div>
                 </div>
