Added Linkedin link

--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
             <div class="links">
                 <h3>More Links</h3>
                 <a href="https://github.com/bnquon" target="_blank" rel="noopener noreferrer"><img src="images/github.png" width="60"></a>
-                <a href="#" target="_blank" rel="noopener noreferrer"><img src="images/linkedin-logo.png" width="60"></a>
+                <a href="www.linkedin.com/in/brandon-quon" target="_blank" rel="noopener noreferrer"><img src="images/linkedin-logo.png" width="60"></a>
             </div>
         </div>
 
