added missing period

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                     </a>
                 </div>
                 <div class="fitfolio-info">
-                    <p><b>Full stack web application</b> that interacts with <b>MySQL Workbench</b> to track running and weightlifting data. All the logged data, created goals, and created templates are user specific</p>
+                    <p><b>Full stack web application</b> that interacts with <b>MySQL Workbench</b> to track running and weightlifting data. All the logged data, created goals, and created templates are user specific.</p>
                 </div>
             </div>
             
