Fixed card content

--- a/index.html
+++ b/index.html
@@ -152,11 +152,11 @@
             <div id="card4">
                 <div class="card">
                     <div class="face">
-                        <h3>NFL Simulator</h3>
+                        <h3>This Website</h3>
                     </div>
                     <div class="content">
                         <p>
-                            NFL simulator with Python and scikit, possible simple expansion with Django
+                            Updating this website as I learn more and create new projects <br><br> Latest update: Feb 20, 2024
                         </p>
                     </div>
                 </div>
